fix alignment and ellipsis

--- a/web_src/css/base.css
+++ b/web_src/css/base.css
@@ -34,6 +34,8 @@
   /* z-index */
   --z-index-modal: 1001; /* modal dialog, hard-coded from Fomantic modal.css */
   --z-index-toast: 1002; /* should be larger than modal */
+
+  --font-size-label: 14px;
 }
 
 @media (min-width: 768px) and (max-width: 1200px) {
