--- a/web_src/css/modules/label.css
+++ b/web_src/css/modules/label.css
@@ -6,12 +6,12 @@
   align-items: center;
   gap: .25rem;
   min-width: 0;
-  vertical-align: middle;
+  max-width: 100%;
   line-height: 1;
   background: var(--color-label-bg);
   color: var(--color-label-text);
   padding: 0.3em 0.5em;
-  font-size: 0.85714286rem;
+  font-size: var(--font-size-label);
   font-weight: var(--font-weight-medium);
   border: 0 solid transparent;
   border-radius: 0.28571429rem;
